[gd_scene load_steps=33 format=3 uid="uid://dtkobp0srsbq5"]

[ext_resource type="Script" uid="uid://cvpeh87q4t22e" path="res://main_menu.gd" id="1_7vrkn"]
[ext_resource type="Texture2D" uid="uid://bc252hx2bqea3" path="res://SORASU__1_-removebg-preview.png" id="2_fu7sn"]
[ext_resource type="Texture2D" uid="uid://dvosfd4p23rbt" path="res://future.jpg" id="3_fu7sn"]
[ext_resource type="AudioStream" uid="uid://4q6rc84i78bx" path="res://Sorasu Menu 1.mp3" id="4_jix8l"]
[ext_resource type="FontFile" uid="uid://deecenqr7nl3u" path="res://Orbitron-VariableFont_wght.ttf" id="5_glbon"]
[ext_resource type="AudioStream" uid="uid://t6yuymrsp7d0" path="res://menu-button-press.mp3" id="6_nlkkf"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_fu7sn"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_jix8l"]
sky_material = SubResource("ProceduralSkyMaterial_fu7sn")

[sub_resource type="Environment" id="Environment_glbon"]
background_mode = 2
sky = SubResource("Sky_jix8l")
tonemap_mode = 2
glow_enabled = true
fog_enabled = true
fog_light_color = Color(0, 0, 0, 1)
fog_density = 0.1

[sub_resource type="LabelSettings" id="LabelSettings_glbon"]
font = ExtResource("5_glbon")
font_size = 32

[sub_resource type="Theme" id="Theme_nlkkf"]
default_font = ExtResource("5_glbon")
default_font_size = 24

[sub_resource type="Theme" id="Theme_jix8l"]
default_font = ExtResource("5_glbon")
default_font_size = 24

[sub_resource type="Theme" id="Theme_glbon"]
default_font = ExtResource("5_glbon")
default_font_size = 20

[sub_resource type="Theme" id="Theme_0o4t1"]
default_font = ExtResource("5_glbon")
default_font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_dy7ct"]
font = ExtResource("5_glbon")
font_size = 18

[sub_resource type="Theme" id="Theme_0k4wn"]
default_font = ExtResource("5_glbon")

[sub_resource type="Theme" id="Theme_j5v2v"]
default_font = ExtResource("5_glbon")

[sub_resource type="LabelSettings" id="LabelSettings_8qtwp"]
font = ExtResource("5_glbon")
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_qe12f"]
font_size = 20

[sub_resource type="Theme" id="Theme_qe12f"]
default_font_size = 24

[sub_resource type="Theme" id="Theme_8qtwp"]
default_font = ExtResource("5_glbon")
default_font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_nlkkf"]
font_size = 10

[sub_resource type="Theme" id="Theme_dy7ct"]
default_font = ExtResource("5_glbon")
default_font_size = 20

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jix8l"]
shading_mode = 0
albedo_texture = ExtResource("3_fu7sn")
uv1_scale = Vector3(0.25, 0.25, 0.25)
uv1_triplanar = true

[sub_resource type="Animation" id="Animation_jix8l"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CSGCylinder3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 14.5477, -42.5508)]
}

[sub_resource type="Animation" id="Animation_fu7sn"]
resource_name = "Scroll"
length = 0.5
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CSGCylinder3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.5, -42.551), Vector3(0, 0.5, -38.551)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_glbon"]
_data = {
&"RESET": SubResource("Animation_jix8l"),
&"Scroll": SubResource("Animation_fu7sn")
}

[sub_resource type="Animation" id="Animation_qe12f"]
resource_name = "FadeIn"
length = 2.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"teleport"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer:volume_db")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -80.0]
}

[sub_resource type="Animation" id="Animation_8qtwp"]
resource_name = "FadeInTutorial"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer:volume_db")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -80.0]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"teleport_tutorial"
}]
}

[sub_resource type="Animation" id="Animation_glbon"]
resource_name = "FadeOut"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_nlkkf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer:volume_db")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qe12f"]
_data = {
&"FadeIn": SubResource("Animation_qe12f"),
&"FadeInTutorial": SubResource("Animation_8qtwp"),
&"FadeOut": SubResource("Animation_glbon"),
&"RESET": SubResource("Animation_nlkkf")
}

[node name="MainMenu" type="Node3D"]
script = ExtResource("1_7vrkn")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_glbon")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 575.0
grow_vertical = 2
size_flags_horizontal = 0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "SELECT GAME MODE

"
label_settings = SubResource("LabelSettings_glbon")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "BEGIN"

[node name="Button6" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
disabled = true
text = "CUSTOMIZATION"

[node name="Button4" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "TUTORIAL"

[node name="Button3" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "SETTINGS"

[node name="Button5" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "CREDITS"

[node name="Button2" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "QUIT"

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer2"]
layout_mode = 2
text = "SELECT OPTIONS
"
label_settings = SubResource("LabelSettings_glbon")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LivesButton" type="OptionButton" parent="CenterContainer/VBoxContainer2"]
layout_mode = 2
theme = SubResource("Theme_nlkkf")
selected = 2
allow_reselect = true
item_count = 5
popup/item_0/text = "Lives: 0"
popup/item_0/id = 0
popup/item_1/text = "Lives: 1"
popup/item_1/id = 1
popup/item_2/text = "Lives: 2"
popup/item_2/id = 2
popup/item_3/text = "Lives: 3"
popup/item_3/id = 3
popup/item_4/text = "Lives: 4"
popup/item_4/id = 4

[node name="ContinuesButton" type="OptionButton" parent="CenterContainer/VBoxContainer2"]
layout_mode = 2
theme = SubResource("Theme_nlkkf")
selected = 3
allow_reselect = true
item_count = 6
popup/item_0/text = "Continues: 0"
popup/item_0/id = 0
popup/item_1/text = "Continues 1"
popup/item_1/id = 1
popup/item_2/text = "Continues: 2"
popup/item_2/id = 2
popup/item_3/text = "Continues: 3"
popup/item_3/id = 3
popup/item_4/text = "Continues: 4"
popup/item_4/id = 4
popup/item_5/text = "Continues: 5"
popup/item_5/id = 5

[node name="QualityButton" type="OptionButton" parent="CenterContainer/VBoxContainer2"]
layout_mode = 2
theme = SubResource("Theme_jix8l")
selected = 0
allow_reselect = true
item_count = 4
popup/item_0/text = "Anti-Aliasing: Off"
popup/item_0/id = 3
popup/item_1/text = "Anti-Aliasing: 2x"
popup/item_1/id = 0
popup/item_2/text = "Anti-Aliasing: 4x"
popup/item_2/id = 1
popup/item_3/text = "Anti-Aliasing: 8x"
popup/item_3/id = 2

[node name="ColorBlindButton" type="CheckButton" parent="CenterContainer/VBoxContainer2"]
layout_mode = 2
theme = SubResource("Theme_glbon")
text = "Colorblind Mode"

[node name="FullscreenCheck" type="CheckBox" parent="CenterContainer/VBoxContainer2"]
layout_mode = 2
theme = SubResource("Theme_0o4t1")
text = "Fullscreen"

[node name="FPSButton" type="OptionButton" parent="CenterContainer/VBoxContainer2"]
layout_mode = 2
theme = SubResource("Theme_jix8l")
selected = 1
allow_reselect = true
item_count = 4
popup/item_0/text = "FPS: 30"
popup/item_0/id = 0
popup/item_1/text = "FPS: 60"
popup/item_1/id = 1
popup/item_2/text = "FPS: 120"
popup/item_2/id = 2
popup/item_3/text = "FPS: Unlimited"
popup/item_3/id = 3

[node name="SFXVolumeLabel" type="Label" parent="CenterContainer/VBoxContainer2"]
layout_mode = 2
text = "SFX Volume"
label_settings = SubResource("LabelSettings_dy7ct")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFXSlider" type="HSlider" parent="CenterContainer/VBoxContainer2"]
layout_mode = 2
min_value = -40.0
max_value = 0.0

[node name="MusicVolumeLabel" type="Label" parent="CenterContainer/VBoxContainer2"]
layout_mode = 2
text = "Music Volume"
label_settings = SubResource("LabelSettings_dy7ct")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicSlider" type="HSlider" parent="CenterContainer/VBoxContainer2"]
layout_mode = 2
min_value = -40.0
max_value = 0.0

[node name="ApplyChanges" type="Button" parent="CenterContainer/VBoxContainer2"]
layout_mode = 2
theme = SubResource("Theme_0k4wn")
text = "APPLY CHANGES"

[node name="Back" type="Button" parent="CenterContainer/VBoxContainer2"]
layout_mode = 2
theme = SubResource("Theme_j5v2v")
text = "BACK"

[node name="VBoxContainer3" type="VBoxContainer" parent="CenterContainer"]
visible = false
layout_mode = 2

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer3"]
layout_mode = 2
text = "CREDITS"
label_settings = SubResource("LabelSettings_8qtwp")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer3"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
text = "Special thanks Ryan Cruz and Lukas Borbe for their QA and feedback, and to Kai Kennedy for supporting me through this project!

\"Cyberpunk City - #1\" (https://skfb.ly/oAKoo) by born2012 is licensed under Creative Commons Attribution (http://creativecommons.org/licenses/by/4.0/).

Main Menu Theme and Boss 1 Theme - Kai Kennedy (YouTube @KaiKennedy)

Tutorial and Start Menu Theme - whvle (https://pixabay.com/users/38594074/)"
label_settings = SubResource("LabelSettings_qe12f")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="BackButton" type="Button" parent="CenterContainer/VBoxContainer3"]
layout_mode = 2
theme = SubResource("Theme_qe12f")
text = "BACK"

[node name="LevelSelect" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Level1Button" type="Button" parent="CenterContainer/LevelSelect"]
modulate = Color(1, 0.917647, 0.905882, 1)
layout_mode = 2
theme = SubResource("Theme_8qtwp")
text = "LEVEL 1"

[node name="Level1Highscore" type="Label" parent="CenterContainer/LevelSelect"]
layout_mode = 2
text = "Highscore: "
label_settings = SubResource("LabelSettings_nlkkf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level2Button" type="Button" parent="CenterContainer/LevelSelect"]
modulate = Color(1, 0.917647, 0.905882, 1)
layout_mode = 2
theme = SubResource("Theme_8qtwp")
text = "LEVEL 2"

[node name="Level2Highscore" type="Label" parent="CenterContainer/LevelSelect"]
visible = false
layout_mode = 2
text = "Highscore: "
label_settings = SubResource("LabelSettings_nlkkf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level3Button" type="Button" parent="CenterContainer/LevelSelect"]
modulate = Color(1, 0.917647, 0.905882, 1)
layout_mode = 2
theme = SubResource("Theme_8qtwp")
text = "LEVEL 3"

[node name="Level3Highscore" type="Label" parent="CenterContainer/LevelSelect"]
visible = false
layout_mode = 2
text = "Highscore: "
label_settings = SubResource("LabelSettings_nlkkf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level4Button" type="Button" parent="CenterContainer/LevelSelect"]
modulate = Color(1, 0.917647, 0.905882, 1)
layout_mode = 2
theme = SubResource("Theme_8qtwp")
text = "LEVEL 4"

[node name="Level4Highscore" type="Label" parent="CenterContainer/LevelSelect"]
visible = false
layout_mode = 2
text = "Highscore: "
label_settings = SubResource("LabelSettings_nlkkf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level5Button" type="Button" parent="CenterContainer/LevelSelect"]
modulate = Color(1, 0.917647, 0.905882, 1)
layout_mode = 2
theme = SubResource("Theme_8qtwp")
disabled = true
text = "LEVEL 5"

[node name="Level5Highscore" type="Label" parent="CenterContainer/LevelSelect"]
visible = false
layout_mode = 2
text = "Highscore: "
label_settings = SubResource("LabelSettings_nlkkf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level6Button" type="Button" parent="CenterContainer/LevelSelect"]
modulate = Color(1, 0.917647, 0.905882, 1)
layout_mode = 2
theme = SubResource("Theme_8qtwp")
disabled = true
text = "LEVEL 6"

[node name="Level6Highscore" type="Label" parent="CenterContainer/LevelSelect"]
visible = false
layout_mode = 2
text = "Highscore: "
label_settings = SubResource("LabelSettings_nlkkf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="EXModeButton" type="CheckBox" parent="CenterContainer/LevelSelect"]
layout_mode = 2
theme = SubResource("Theme_8qtwp")
text = "EX Mode"

[node name="BackToMenu" type="Button" parent="CenterContainer/LevelSelect"]
layout_mode = 2
theme = SubResource("Theme_dy7ct")
text = "BACK"

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 14.5477, -42.5508)
flip_faces = true
radius = 2.0
height = 98.8682
sides = 32
material = SubResource("StandardMaterial3D_jix8l")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.494037, 3.16145)
current = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_glbon")
}
autoplay = "Scroll"

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_qe12f")
}
autoplay = "FadeOut"

[node name="ColorRect" type="ColorRect" parent="."]
z_index = 1
custom_minimum_size = Vector2(4000, 4000)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_jix8l")
autoplay = true
bus = &"Music"

[node name="CenterContainer2" type="CenterContainer" parent="."]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -575.0
grow_horizontal = 0
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="CenterContainer2"]
layout_mode = 2
texture = ExtResource("2_fu7sn")

[node name="ButtonPress" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_nlkkf")
bus = &"SFX"

[connection signal="pressed" from="CenterContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Button5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="item_selected" from="CenterContainer/VBoxContainer2/QualityButton" to="." method="_on_quality_button_item_selected"]
[connection signal="pressed" from="CenterContainer/VBoxContainer2/ColorBlindButton" to="." method="_on_color_blind_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer2/FullscreenCheck" to="." method="_on_fullscreen_check_pressed"]
[connection signal="item_selected" from="CenterContainer/VBoxContainer2/FPSButton" to="." method="_on_fps_button_item_selected"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer2/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer2/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer2/ApplyChanges" to="." method="_on_apply_changes_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer2/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer3/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="CenterContainer/LevelSelect/Level1Button" to="." method="_on_level_1_button_pressed"]
[connection signal="pressed" from="CenterContainer/LevelSelect/Level2Button" to="." method="_on_level_2_button_pressed"]
[connection signal="pressed" from="CenterContainer/LevelSelect/Level3Button" to="." method="_on_level_3_button_pressed"]
[connection signal="pressed" from="CenterContainer/LevelSelect/Level4Button" to="." method="_on_level_4_button_pressed"]
[connection signal="pressed" from="CenterContainer/LevelSelect/Level5Button" to="." method="_on_level_5_button_pressed"]
[connection signal="pressed" from="CenterContainer/LevelSelect/Level6Button" to="." method="_on_level_6_button_pressed"]
[connection signal="pressed" from="CenterContainer/LevelSelect/EXModeButton" to="." method="_on_ex_mode_button_pressed"]
[connection signal="pressed" from="CenterContainer/LevelSelect/BackToMenu" to="." method="_on_back_to_menu_pressed"]
